[project]
name = "awaitwhat"
version = "24.11"
description = "async/await introspection"
authors = [{name="Dima Tisnek", email="dimaqq@gmail.com"}]
license = { file = "LICENSE" }
readme = "readme.md"
keywords = ["asyncio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: Implementation :: CPython",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Debuggers",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
homepage = "https://github.com/dimaqq/awaitwhat"
repository = "https://github.com/dimaqq/awaitwhat"
documentation = "https://github.com/dimaqq/awaitwhat"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["awaitwhat"]
ext-modules = [
    { name = "awaitwhat._what", sources = ["awaitwhat/what.c"] }
]
